--- a/.github/workflows/deploy.example.yml
+++ b/.github/workflows/deploy.example.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd apps/web
-          bun install --frozen-lockfile
+          bun install
 
       - name: Run tests
         run: |
