chore: delete package-lock.json and update Dependabot for Bun
- Delete apps/web/package-lock.json (project uses Bun, not npm)
- Update Dependabot config: keep npm ecosystem for package.json monitoring
  (Bun uses package.json as source of truth, native Bun support not available yet)
- Add note that developers should run 'bun install' after Dependabot PRs

Related to issue #7

--- a/apps/web/.github/dependabot.yml
+++ b/apps/web/.github/dependabot.yml
@@ -1,9 +1,15 @@
 version: 2
 updates:
+  # Note: Dependabot doesn't have native Bun support yet
+  # Since Bun uses package.json as the source of truth (compatible with npm),
+  # we keep npm ecosystem to monitor package.json updates
+  # Developers should run `bun install` after merging dependabot PRs to update bun.lock
   - package-ecosystem: "npm"
-    directory: "/"
+    directory: "/apps/web"
     schedule:
       interval: "daily"
+    # Bun uses package.json, so npm updates are compatible
+    # After merging, run: bun install to update bun.lock
 
   - package-ecosystem: "devcontainers"
     directory: "/"
