--- a/apps/web/.gitignore
+++ b/apps/web/.gitignore
@@ -16,11 +16,15 @@ dist-ssr
 # npm files (project uses Bun)
 package-lock.json
 
-# macOS duplicate files
+# macOS duplicate files (space + number + extension)
 **/* 2.*
 **/* 3.*
 **/* 4.*
 **/* 5.*
+**/* 6.*
+**/* 7.*
+**/* 8.*
+**/* 9.*
 
 # Editor directories and files
 .vscode/*
