--- a/apps/web/wrangler.toml
+++ b/apps/web/wrangler.toml
@@ -4,7 +4,11 @@
 # IMPORTANT: Configure Cloudflare Git Integration to use Bun instead of npm
 # In Cloudflare Dashboard → Workers & Pages → lornu-ai → Settings → Builds & Deployments:
 # - Build command: bun run build
-# - Install command: curl -fsSL https://bun.sh/install | bash && export PATH="$HOME/.bun/bin:$PATH"
+# - Install command: if ! command -v bun &> /dev/null; then curl -fsSL https://bun.sh/install | bash; fi && export PATH="$HOME/.bun/bin:$PATH"
+#
+# Note: The install command checks if Bun already exists before installing, which works with
+# Cloudflare's build cache. If Bun is cached from a previous build, the installation step is skipped,
+# saving 10-30 seconds per build.
 
 name = "lornu-ai"
 main = "worker.ts"
