--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,8 @@
         "build": "tsc -b --noCheck && vite build",
         "lint": "eslint .",
         "optimize": "vite optimize",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "test:contact": "bun run scripts/test-contact-form.ts"
     },
     "dependencies": {
         "@github/spark": "^0.39.0",
