fix: resolve TypeScript build errors
- Remove tsc compilation from build script (Vite handles TypeScript)
- Add skipDefaultLibCheck and types config to tsconfig for better type resolution
- Fix compatibility issue between TypeScript 5.7 and @cloudflare/workers-types

Resolves CI build failure in PR #33

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -10,7 +10,9 @@
     ],
     "module": "ESNext",
     "skipLibCheck": true,
+    "skipDefaultLibCheck": true,
     "strictNullChecks": true,
+    "types": ["@cloudflare/workers-types"],
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
