fix: address code review feedback for testing infrastructure
Critical fixes:
- Fix missing vi import in setup.ts (tests were failing)
- Remove .DS_Store files from repository
- Remove unused logo files (logo2.svg, logo3.svg)

Improvements:
- Add test timeout configuration to prevent flaky tests
- Improve App.test.tsx with meaningful routing tests
- Add @vitest/coverage-v8 dependency for coverage provider

All critical issues from code review have been addressed.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -90,6 +90,7 @@
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
         "@vitejs/plugin-react-swc": "^4.2.2",
+        "@vitest/coverage-v8": "^4.0.15",
         "@vitest/ui": "^4.0.15",
         "eslint": "^9.28.0",
         "eslint-plugin-react-hooks": "^5.2.0",
