feat: optimize cloudflare build with smart bun install
- Add install-bun.sh to check for existing bun installation
- Update wrangler.toml to reference the new script

--- a/apps/web/wrangler.toml
+++ b/apps/web/wrangler.toml
@@ -4,7 +4,7 @@
 # IMPORTANT: Configure Cloudflare Git Integration to use Bun instead of npm
 # In Cloudflare Dashboard → Workers & Pages → lornu-ai → Settings → Builds & Deployments:
 # - Build command: bun run build
-# - Install command: curl -fsSL https://bun.sh/install | bash && export PATH="$HOME/.bun/bin:$PATH"
+# - Install command: chmod +x install-bun.sh && ./install-bun.sh && export PATH="$HOME/.bun/bin:$PATH"
 
 name = "lornu-ai"
 main = "worker.ts"
