--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,7 +15,7 @@
         "test:ui": "vitest --ui",
         "test:run": "vitest run",
         "test:coverage": "vitest run --coverage",
-        "test:e2e": "playwright test",
+        "test:integration": "vitest run src/**/*.integration.test.tsx",
         "test:ci": "vitest run --coverage"
     },
     "dependencies": {
@@ -91,7 +91,6 @@
         "@types/react": "^19.2.7",
         "@types/react-dom": "^19.2.3",
         "@vitejs/plugin-react-swc": "^4.2.2",
-        "@playwright/test": "^1.49.0",
         "@vitest/coverage-v8": "^4.0.15",
         "@vitest/ui": "^4.0.15",
         "eslint": "^9.39.2",
