fix: add missing comma in package.json scripts section
- Add missing comma after test:ci script
- Fixes JSON syntax error causing build failure

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,7 +15,7 @@
         "test:run": "vitest run",
         "test:coverage": "vitest run --coverage",
         "test:integration": "vitest run src/**/*.integration.test.tsx",
-        "test:ci": "vitest run --coverage"
+        "test:ci": "vitest run --coverage",
         "test:contact": "bun run scripts/test-contact-form.ts"
     },
     "dependencies": {
