--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -86,9 +86,11 @@
         "@tailwindcss/postcss": "^4.1.8",
         "@testing-library/jest-dom": "^6.9.1",
         "@testing-library/react": "^16.3.0",
+        "@testing-library/user-event": "^14.5.2",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
         "@vitejs/plugin-react-swc": "^4.2.2",
+        "@vitest/ui": "^2.1.8",
         "eslint": "^9.28.0",
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.19",
@@ -99,6 +101,7 @@
         "typescript-eslint": "^8.38.0",
         "vite": "^6.4.1",
         "vite-plugin-svgr": "^4.5.0",
+        "vitest": "^2.1.8",
         "wrangler": "^4.54.0"
     },
     "workspaces": {
