--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -72,6 +72,7 @@
         "react-hook-form": "^7.54.2",
         "react-resizable-panels": "^2.1.7",
         "react-router-dom": "^7.10.1",
+        "recharts": "^2.12.7",
         "sonner": "^2.0.1",
         "tailwind-merge": "^3.0.2",
         "tw-animate-css": "^1.2.4",
