--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,7 +16,10 @@
         "test:coverage": "vitest run --coverage",
         "test:integration": "vitest run src/**/*.integration.test.tsx",
         "test:ci": "vitest run --coverage",
-        "test:contact": "bun run scripts/test-contact-form.ts"
+        "test:contact": "bun run scripts/test-contact-form.ts",
+        "test:e2e": "playwright test",
+        "test:e2e:ui": "playwright test --ui",
+        "test:e2e:smoke": "playwright test tests/e2e/smoke-test.spec.ts --project=chromium"
     },
     "dependencies": {
         "@github/spark": "^0.39.0",
@@ -79,6 +82,7 @@
     "devDependencies": {
         "@cloudflare/workers-types": "^4.20251213.0",
         "@eslint/js": "^9.21.0",
+        "@playwright/test": "^1.57.0",
         "@tailwindcss/postcss": "^4.1.8",
         "@testing-library/jest-dom": "^6.9.1",
         "@testing-library/react": "^16.3.0",
