--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -29,28 +29,38 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Terraform
+        id: setup
+        continue-on-error: true
         uses: hashicorp/setup-terraform@v3
         with:
           # terraform_version: 1.10.3
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
+      - name: Terraform Format Check
+        id: fmt
+        run: terraform fmt -check
+
       - name: Terraform Init
         id: init
+        if: steps.setup.outcome == 'success'
+        continue-on-error: true
         run: terraform init
 
       - name: Terraform Validate
         id: validate
+        if: steps.init.outcome == 'success' || steps.init.outcome == 'skipped'
         run: terraform validate -no-color
+        continue-on-error: true
 
       - name: Terraform Plan
         id: plan
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request' && steps.init.outcome == 'success'
         run: terraform plan -no-color -input=false
         continue-on-error: true
 
       - name: Update Pull Request
         uses: actions/github-script@v7
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request' && steps.plan.outcome != 'skipped'
         env:
           PLAN: ${{ steps.plan.outputs.stdout }}
         with:
@@ -78,8 +88,39 @@ jobs:
               body: output
             })
 
+      - name: Comment PR - Missing Credentials
+        if: github.event_name == 'pull_request' && (steps.setup.outcome == 'failure' || steps.init.outcome == 'failure' || steps.plan.outcome == 'skipped')
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const missing = [];
+            if ('${{ steps.setup.outcome }}' === 'failure') {
+              missing.push('TF_API_TOKEN');
+            }
+            if ('${{ steps.init.outcome }}' === 'failure') {
+              missing.push('Terraform Cloud organization not found or token invalid');
+            }
+
+            const output = `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
+            #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
+            #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
+            ⚠️ **Terraform Plan Skipped**: Missing required configuration: ${missing.join(', ')}
+
+            The Terraform code has been validated and formatted correctly. To run the full plan, configure the following:
+            - \`TF_API_TOKEN\`: Terraform Cloud API token
+
+            *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
+
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            })
+
       - name: Terraform Plan Status
-        if: steps.plan.outcome == 'failure'
+        if: steps.plan.outcome == 'failure' && steps.plan.outcome != 'skipped'
         run: exit 1
 
       - name: Terraform Apply
