fix: Handle Terraform Cloud organization error gracefully
- Add continue-on-error to Terraform init step
- Add format check step (runs regardless of backend)
- Make validate/plan conditional on successful init
- Add PR comment when Terraform Cloud organization is not found
- Workflow now passes even when org doesn't exist (secret exists but org missing)
- Provides helpful feedback about organization/workspace setup

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -30,7 +30,6 @@ jobs:
 
       - name: Setup Terraform
         id: setup
-        continue-on-error: true
         uses: hashicorp/setup-terraform@v3
         with:
           # terraform_version: 1.10.3
@@ -42,19 +41,18 @@ jobs:
 
       - name: Terraform Init
         id: init
-        if: steps.setup.outcome == 'success' && secrets.TF_API_TOKEN != ''
         continue-on-error: true
         run: terraform init
 
       - name: Terraform Validate
         id: validate
-        if: (steps.init.outcome == 'success' || steps.init.outcome == 'skipped') && secrets.TF_API_TOKEN != ''
+        if: steps.init.outcome == 'success' || steps.init.outcome == 'skipped'
         run: terraform validate -no-color
         continue-on-error: true
 
       - name: Terraform Plan
         id: plan
-        if: github.event_name == 'pull_request' && steps.init.outcome == 'success' && secrets.TF_API_TOKEN != ''
+        if: github.event_name == 'pull_request' && steps.init.outcome == 'success'
         run: terraform plan -no-color -input=false
         continue-on-error: true
 
@@ -88,29 +86,27 @@ jobs:
               body: output
             })
 
-      - name: Comment PR - Missing Credentials
-        if: github.event_name == 'pull_request' && (secrets.TF_API_TOKEN == '' || steps.setup.outcome == 'failure' || steps.init.outcome == 'failure' || steps.init.outcome == 'skipped')
+      - name: Comment PR - Terraform Cloud Issue
+        if: github.event_name == 'pull_request' && (steps.init.outcome == 'failure' || steps.plan.outcome == 'skipped')
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const missing = [];
-            if ('${{ secrets.TF_API_TOKEN }}' === '') {
-              missing.push('TF_API_TOKEN (secret not configured)');
-            } else if ('${{ steps.setup.outcome }}' === 'failure') {
-              missing.push('TF_API_TOKEN (invalid)');
-            }
+            const issues = [];
             if ('${{ steps.init.outcome }}' === 'failure') {
-              missing.push('Terraform Cloud organization not found or token invalid');
+              issues.push('Terraform Cloud organization "lornu-ai" not found or token lacks access');
+              issues.push('Please verify the organization exists and the TF_API_TOKEN has proper permissions');
             }
 
             const output = `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
             #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
             #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
-            ⚠️ **Terraform Plan Skipped**: Missing required configuration: ${missing.join(', ')}
+            ⚠️ **Terraform Plan Skipped**: ${issues.join('. ')}
 
-            The Terraform code has been validated and formatted correctly. To run the full plan, configure the following:
-            - \`TF_API_TOKEN\`: Terraform Cloud API token
+            The Terraform code has been validated and formatted correctly. To run the full plan:
+            1. Ensure Terraform Cloud organization "lornu-ai" exists
+            2. Verify \`TF_API_TOKEN\` has access to the organization
+            3. Check that the workspace "lornu-ai" exists in the organization
 
             *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
 
