--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -29,20 +29,20 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Terraform
-        id: setup
         uses: hashicorp/setup-terraform@v3
         with:
-          # terraform_version: 1.10.3
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+          terraform_version: 1.8.0
+
+      - name: Terraform Init
+        id: init
+        env:
+          TF_TOKEN_app_terraform_io: ${{ secrets.TF_API_TOKEN }}
+        continue-on-error: true
+        run: terraform init
 
       - name: Terraform Format Check
         id: fmt
         run: terraform fmt -check
-
-      - name: Terraform Init
-        id: init
-        continue-on-error: true
-        run: terraform init
 
       - name: Terraform Validate
         id: validate
@@ -53,12 +53,14 @@ jobs:
       - name: Terraform Plan
         id: plan
         if: github.event_name == 'pull_request' && steps.init.outcome == 'success'
+        env:
+          TF_TOKEN_app_terraform_io: ${{ secrets.TF_API_TOKEN }}
         run: terraform plan -no-color -input=false
         continue-on-error: true
 
       - name: Update Pull Request
         uses: actions/github-script@v7
-        if: github.event_name == 'pull_request' && steps.plan.outcome != 'skipped'
+        if: github.event_name == 'pull_request'
         env:
           PLAN: ${{ steps.plan.outputs.stdout }}
         with:
@@ -123,4 +125,6 @@ jobs:
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
+        env:
+          TF_TOKEN_app_terraform_io: ${{ secrets.TF_API_TOKEN }}
         run: terraform apply -auto-approve -input=false
